advanced messaging queuing protocol: rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ info.app.version=1.0.0
 
 #Spring Slueth Configuration
 spring.application.name=AdvanceConcepts
+#Rabiit MQ config
+rabbit.queue.username=rabbitmq
+rabbit.queue.password=rabbitmq
+rabbit.queue.host=localhost
+rabbit.queue.port=0
+#rabbit.queue.name.email.attachment=qu-attachment
+#rabbit.queue.name.email=qu-email
+#rabbit.queue.name.sms=qu-sms
