advanced messaging queuing protocol: rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ rabbit.queue.port=0
 #rabbit.queue.name.email.attachment=qu-attachment
 #rabbit.queue.name.email=qu-email
 #rabbit.queue.name.sms=qu-sms
+## rest template config
+resttemplate.timeout=30000
+resttemplate.connection.timeout=30000
