Spring Batch processing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ rabbit.queue.port=0
 ## rest template config
 resttemplate.timeout=30000
 resttemplate.connection.timeout=30000
+#Disable batch job's auto start
+spring.batch.job.enabled=false
+spring.main.banner-mode=off
+#batch input files location
+input.dir=c:/temp/input
+
